--- a/blocksize/css/app.css
+++ b/blocksize/css/app.css
@@ -25,9 +25,12 @@ code {
     background: rgba(0,0,0,0);
 }
 
-.impossible .capped .size,
-.impossible .unlimited .speed,
-.impossible.processing .rate
+.results .bandwidth td {
+    padding-right: 5px;
+}
+
+.impossible,
+.impossible:focus
 {
     border: 3px solid #F00;
 }
@@ -44,6 +47,9 @@ code {
 .popup {
     cursor: pointer;
     position: relative;
+}
+div.popup {
+    display: inline-block;
 }
 .popup-content {
     display: none;
