--- a/blocksize/css/app.css
+++ b/blocksize/css/app.css
@@ -47,6 +47,11 @@ code {
 .popup {
     cursor: pointer;
     position: relative;
+    border-bottom: 1px dotted #999;
+    line-height: 13px; /* sets dotted underline correctly */
+}
+.popup * {
+    line-height: 1.42857143; /* from bootstrap */
 }
 div.popup {
     display: inline-block;
@@ -60,7 +65,7 @@ div.popup {
     border-radius: 3px;
     padding: 5px;
     z-index: 1000;
-    width: 200px;
+    width: 250px;
     max-height: 300px;
     overflow-y: auto;
 }
